# ComfyUI-Batch-Render

./: .gitignore  CLAUDE.md  README.md  __init__.py  config.example.yaml  pyproject.toml
.github/workflows/: publish.yml
comfyui_batch_render/: __init__.py  cli.py  comfy_client.py  config.py  detect.py  models.py  patcher.py  paths.py  pipeline.py  runner.py  store.py
comfyui_batch_render/server/: app.py  bindings.py
comfyui_batch_render/server/static/: api.js  app.js  components.js  index.html  style.css
examples/: pipeline.example.yaml  portrait.example.api.json
tests/: test_cli.py  test_comfy_client.py  test_detect.py  test_patcher.py  test_pipeline.py  test_runner.py  test_store.py  test_web.py
web/comfyui/: top_menu.js
